The map and its inhabitants can be dynamically loaded based on configuration files. This enables a different set of maps allowing more complex scenarios.